feat: add swagger and fixes
